[gd_scene load_steps=4 format=3 uid="uid://bbyxyh4mlf5bt"]

[ext_resource type="Script" path="res://Scripts/UI/AuthenticationLogin.gd" id="1_6dvms"]
[ext_resource type="Texture2D" uid="uid://bnkfyu4s1q08l" path="res://Sprites/ShopUI/backlogin.png" id="2_kwvul"]
[ext_resource type="FontFile" uid="uid://dflx50tvhjet4" path="res://Fonts/TMT-Paint-Regular.otf" id="3_tbd4l"]

[node name="Authentication" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -3.0
offset_bottom = -331.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6dvms")

[node name="Back" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 84.0
offset_top = 143.0
offset_right = 575.0
offset_bottom = 711.0
texture = ExtResource("2_kwvul")

[node name="Title" type="Label" parent="Back"]
layout_mode = 0
offset_left = 31.0
offset_top = 34.0
offset_right = 459.0
offset_bottom = 84.0
theme_override_fonts/font = ExtResource("3_tbd4l")
theme_override_font_sizes/font_size = 28
text = "Login/Sign Cloud Save"

[node name="LoginStatusLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 136.0
offset_top = 245.0
offset_right = 396.0
offset_bottom = 262.0
theme_override_fonts/font = ExtResource("3_tbd4l")
text = "Login Status"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 136.0
offset_top = 268.0
offset_right = 396.0
offset_bottom = 525.0
scale = Vector2(1.5, 1.5)

[node name="Email" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Email"

[node name="Password" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="Login" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tbd4l")
text = "Login"

[node name="SignUp" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tbd4l")
text = "SignUp"

[node name="Logout" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tbd4l")
text = "LogOut"

[node name="SyncData" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tbd4l")
text = "SyncData"

[connection signal="button_down" from="VBoxContainer/Login" to="." method="_on_login_button_pressed"]
[connection signal="button_down" from="VBoxContainer/SignUp" to="." method="_on_signup_button_pressed"]
[connection signal="button_down" from="VBoxContainer/Logout" to="." method="_on_logout_button_pressed"]
[connection signal="button_down" from="VBoxContainer/SyncData" to="." method="_on_sync_data_button_pressed"]
